--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>唐诗一首</title>
+    
+    <style type="text/css">
+      body {
+        background:url(a.jpg)
+      }
+    </style>
   </head>
   
   <body>
-    <img src="a.jpg" />
     <h1>静夜思</h1>
     <p>床前明月光</p>
     <p>疑是地上霜</p>
