--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <style type="text/css">
       body {
         background:url(a.jpg)
+        background-size:100% 100%
+        height: 100%
+      }
+      html {
+        height: 100%
       }
     </style>
   </head>
