--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <style type="text/css">
       body {
-        background:url(a.jpg)
+        background:url(a.jpg);
           height: 100%
       }
       html {
@@ -16,7 +16,7 @@
   </head>
   
   <body>
-    <h1>静夜思</h1>
+    <h1>静夜思111111111111</h1>
     <p>床前明月光</p>
     <p>疑是地上霜</p>
     <p>举头望明月</p>
