--- a/index.html
+++ b/index.html
@@ -1,25 +1,70 @@
 <!doctype html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>唐诗一首</title>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,height=device-height">
+
     <style type="text/css">
-      body {
-        background:url(a.jpg);
-          height: 100%
-      }
-      html {
-        
-      }
+        body {
+            background: url(images/libai.jpg) no-repeat;
+            /*background-repeat: no-repeat;*/
+            height: 100%;
+            /*width: 100%;*/
+            background-size: 100% 100%;
+            margin: 0;
+            animation: myanim 15s infinite;
+            padding: 0;
+overflow: auto;
+        }
+* {
+    margin: 0;
+    padding: 0;
+}
+        html {
+            /*width: 100%;*/
+            border: 0;
+            padding: 0;
+            margin: 0;
+            height: 100%;
+        }
+div {
+    height: 100%;
+}
+        @keyframes myanim {
+            0% {
+                opacity: 0.3;
+                /*background-image: url("images/libai.jpg");*/
+            }
+            50% {
+                opacity: 1;
+                /*background-image: url("images/a.jpg");*/
+            }
+            100% {
+                opacity: 0.3;
+                /*background-image: url("images/libai.jpg");*/
+            }
+        }
     </style>
-  </head>
-  
-  <body>
+</head>
+
+<body>
+<div>
     <h1>静夜思111111111111</h1>
     <p>床前明月光</p>
     <p>疑是地上霜</p>
     <p>举头望明月</p>
     <p>低头思故乡</p>
-  </body>
+    <h1>静夜思111111111111</h1>
+    <p>床前明月光</p>
+    <p>疑是地上霜</p>
+    <p>举头望明月</p>
+
+
+
+
+
+
+</div>
+</body>
 </html>
