--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ div {
             }
             50% {
                 opacity: 1;
-                /*background-image: url("images/a.jpg");*/
+                /*background-image: url("images/images.jpg");*/
             }
             100% {
                 opacity: 0.3;
